@@ -1,3 +1,8 @@
+2000-01-26  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/module_interface.c (PositiveWrite):
+	fixed 'dying module' bug
+
 2000-01-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleMapNotify):
